--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3695,6 +3695,9 @@
     <ClCompile Include="Archive\5600\5672.cpp">
       <Filter>Archive\5600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10002.cpp">
+      <Filter>UVa\10000\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
