--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3698,6 +3698,9 @@
     <ClCompile Include="UVa\10000\10002.cpp">
       <Filter>UVa\10000\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10500\10577.cpp">
+      <Filter>UVa\10500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
