Checked in distsource.cpp. Find a way to do the compilation within visual studio.

--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -546,6 +546,15 @@
     <Filter Include="Archive\5400">
       <UniqueIdentifier>{8db1548a-ed4f-43c4-81f5-9373f16d3231}</UniqueIdentifier>
     </Filter>
+    <Filter Include="DCJ">
+      <UniqueIdentifier>{657fb90d-fb18-4b79-b684-a05f51a44668}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="DCJ\2015">
+      <UniqueIdentifier>{fb3952c2-c923-4f3b-b223-5b46f0417468}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="DCJ\2016">
+      <UniqueIdentifier>{93766346-45a6-48ac-a425-0000ff10ef35}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source.cpp">
